# kmeans

./: CMakeLists.txt  kmeans.cpp  kmeans.hpp  stuff.cpp
examples/: CMakeLists.txt  image_to_txt.cpp  images.cpp  txt.cpp
